# careless_whisper_client

./: .env.example  .gitignore  audio_recorder.py  com.gallem.folderwatcher.plist  folder_watcher.sh  obs_controller.py  output.txt  pyproject.toml  readme.md  record_and_send.py  requirements.txt
